Initial CRUD & DB Implementation
Implements basic CRUD on Transmissions, using MongoDB as a database. This also includes a docker config for deploying locally. The OpenAPI spec is used to automatically parse and validate requests and responses in express.

# NPM
Adds the following commands:
- `dev:prepare`
  - Sets up husky
- `dev:up`
  - Spins up the local docker instance hosting services for emptystream to run (right now, just the DB)
- `dev:down`
  - Spins down the local docker instance described aboe
- `prebuild`
   - Called before tsc builds. Lints the project
- `build`
  - Builds the project using tsc
- `start`
  - Runs the built project.

# Models
Actually implements the Transmission model using Mongoose as ODM.

# API Spec
The OpenAPI spec and validator actually handles MongoDB ObjectIDs correctly. Yay!

# Endpoints
All Transmission endpoints function at a bare minimum. These are
- `GET /transmission`
- `POST /transmission`
- `GET /transmission/:id`
- `PATCH /transmission/:id`
- `DELETE /transmission/:id`

# Future TODO
- This implements the baseline for Transmission CRUD - but doesn't actually do anything with audio files. We still need to audio file uploading and splitting.
- For some reason implicitly expecting a Mongoose Document to get stringified when being passed into a `res.json()` call doesn't work. This PR expliciley returns json and manually calls `JSON.stringify()` for the sake of just getting this done.
