# openapi.yml
@@ -34,7 +34,7 @@ paths:
           required: true
           schema:
             type: string
-            format: nanoId
+            format: mongo-objectid
       responses:
         "200":
           description: The transmission matching the specified ID.
@@ -45,7 +45,7 @@ paths:
                 properties:
                   lastEvaulatedId:
                     type: string
-                    format: nanoId
+                    format: mongo-objectid
                     example: fMW0PcHRJGUtUnadq4mvy
                   itemCount:
                     type: integer
@@ -79,7 +79,7 @@ paths:
           required: true
           schema:
             type: string
-            format: nanoId
+            format: mongo-objectid
       requestBody:
         description: Fields to update.
         required: true
@@ -123,7 +123,7 @@ paths:
           required: true
           schema:
             type: string
-            format: nanoId
+            format: mongo-objectid
       responses:
         "200":
           description: The transmission has been removed
@@ -147,13 +147,21 @@ paths:
         - Song Management API
       parameters:
         - in: query
-          name: lastEvaluatedId
-          description: If paginating, the lastEvaluatedId of the previous request.
+          name: lastPageKey
+          description: If paginating, the value of pageKey from the previous request.
           required: false
           schema:
-            type: string
-            format: nanoId
-            example: fMW0PcHRJGUtUnadq4mvy
+            type: integer
+            example: 1704829257257
+        - in: query
+          name: pageSize
+          description: If paginating, the max number of entries per page.
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 32
+            default: 8
       responses:
         "200":
           description: A list of Transmissions (starting from the provided lastEvaluatedId, if there was one).
@@ -162,13 +170,9 @@ paths:
               schema:
                 type: object
                 properties:
-                  lastEvaulatedId:
+                  pageKey:
                     type: string
-                    format: nanoId
                     example: fMW0PcHRJGUtUnadq4mvy
-                  itemCount:
-                    type: integer
-                    example: 1
                   items:
                     type: array
                     items:
@@ -188,9 +192,12 @@ paths:
         description: Data relating to the new Transmission.
         required: true
         content:
-          multipart/formdata:
+          multipart/form-data:
             schema:
               type: object
+              required:
+                - "name"
+                - "audio"
               properties:
                 name:
                   type: string
@@ -230,12 +237,12 @@ components:
     Transmission:
       type: object
       required:
-        - id
+        - _id
         - name
       properties:
-        id:
+        _id:
           type: string
-          format: nanoId
+          format: mongo-objectid
           example: fMW0PcHRJGUtUnadq4mvy
         name:
           type: string
@@ -249,12 +256,12 @@ components:
     TransmissionChannel:
       type: object
       required:
-        - id
+        - _id
         - type
       properties:
-        id:
+        _id:
           type: string
-          format: nanoId
+          format: mongo-objectid
           example: fMW0PcHRJGUtUnadq4mvy
         type:
           type: string
